# watt

./: Cargo.toml  README.md
src/: config.rs  main.rs  profile.rs
src/collect/: apple_gpu.rs  cpu.rs  disk.rs  gpu.rs  iokit_ffi.rs  memory.rs  mod.rs  network.rs  power.rs  process.rs
src/ui/: app.rs  cpu_view.rs  gpu_view.rs  header.rs  mod.rs  process_view.rs  profile_view.rs  sparkline.rs  theme.rs
