[package]
name = "watt-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "watt"
path = "src/main.rs"

[dependencies]
sysinfo = "0.32"
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
anyhow = "1"
tokio-stream = "0.1"
futures = "0.3"

[dependencies.nvml-wrapper]
version = "0.11"
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
serde_json = "1"

[features]
nvidia = ["nvml-wrapper"]
